Bug #100167: Added server name to a few connection error msgs for imap, news and pop. Also fixed two obsolete imap error numbers (1 & 2). r=bienvenu, sr=sspitzer.